# chiaki-ng

./: .gitmodules  CMakeLists.txt
lib/: CMakeLists.txt
lib/include/chiaki/: ecdh.h  gkcrypt.h
lib/src/: discovery.c  discoveryservice.c  ecdh.c  gkcrypt.c  random.c  rpcrypt.c  session.c
lib/src/crypto/libnx/: README.md  aes_cfb.c  aes_cfb.h  ghash_pmull.c  ghash_pmull.h  gmac.c  gmac.h
lib/src/crypto/libnx/microecc/: uECC.c  uECC.h  uECC_config.h
lib/src/remote/: holepunch.c
scripts/: Dockerfile.arm64-pmull-test  run-tests.sh
scripts/switch/: build.sh  push-podman-build-chiaki.sh  run-podman-build-chiaki.sh
switch/: CMakeLists.txt
switch/include/: gui.h  host.h  io.h
switch/src/: discoverymanager.cpp  gui.cpp  io.cpp
test/: CMakeLists.txt  gkcrypt.c
test/libnx_stubs/: libnx_crypto_stubs.c
test/libnx_stubs/switch/crypto/: aes.h  hmac.h  sha256.h
test/libnx_stubs/switch/services/: csrng.h
